Updated model and NODE_ENV
